samples/_failures_safe/1761423053_ccf205_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f49fdd82.c: In function ‘main’:
./samples/SAFE/__tmp_f49fdd82.c:167:9: error: expected declaration or statement at end of input
  167 |         case 2:
      |         ^~~~
./samples/SAFE/__tmp_f49fdd82.c:167:9: error: expected declaration or statement at end of input
